# pose_detection

./: .gitignore  .pubignore  CHANGELOG.md  README.md  pose_detection_tflite-flutter-full_repository.txt  pubspec.yaml  runAllTests.sh  runBenchmark.sh  scripts.txt
.github/workflows/: build.yml  flutter-ci.yml  integration.yml
android/: build.gradle  settings.gradle
example/: .gitignore  README.md  integration_test  pubspec.yaml
example/lib/: main.dart  test.dart
example_web/: pubspec.yaml
integration_test/: pose_detector_integration_test.dart
ios/: pose_detection.podspec  pose_detection_tflite.podspec
lib/: pose_detection.dart  pose_detection_tflite.dart  pose_detection_tflite_web.dart  pose_detection_web.dart
linux/: CMakeLists.txt  pose_detection_plugin.cc  pose_detection_plugin_private.h  pose_detection_tflite_plugin.cc  pose_detection_tflite_plugin_private.h
macos/: pose_detection.podspec  pose_detection_tflite.podspec
test/: README.md  additional_coverage_test.dart  pose_detector_test.dart  test_config.dart  types_test.dart
windows/: CMakeLists.txt  pose_detection_plugin.cpp  pose_detection_plugin.h  pose_detection_plugin_c_api.cpp  pose_detection_tflite_plugin.cpp  pose_detection_tflite_plugin.h  pose_detection_tflite_plugin_c_api.cpp  registration.cpp
windows/include/pose_detection/: pose_detection_plugin.h  pose_detection_plugin_c_api.h
windows/include/pose_detection_tflite/: pose_detection_tflite_plugin.h  pose_detection_tflite_plugin_c_api.h
windows/test/: pose_detection_plugin_test.cpp  pose_detection_tflite_plugin_test.cpp
(+70 files in other folders)
